--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2011-10-09  Damon Chaplin  <damon@gnome.org>
+
+	* Released GooCanvas 2.0.1
+
+2011-10-09  Damon Chaplin  <damon@gnome.org>
+
+	* src/goocanvaspolyline.[hc]: Added GOO_CANVAS_POLYLINE_ prefix to
+	NUM_ARROW_POINTS to silence gir warnings.
+
+	* src/goocanvas.c (goo_canvas_render): added example code for printing.
+
+	* src/goocanvasitem.c: added (element-type GooCanvas.CanvasItem)
+	annotation to get_items_at().
+
 2011-10-07  Damon Chaplin  <damon@gnome.org>
 
 	* src/goocanvasitem.c (goo_canvas_item_get_transform)
