--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2011-10-19  Jasper Lievisse Adriaanse <jasperla@gnome.org>
+
+	* configure.in: Bump pygobject dependency to 2.90.4. Bug #661487.
+
 2011-10-09  Damon Chaplin  <damon@gnome.org>
 
 	* Released GooCanvas 2.0.1
