--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-09-24  Damon Chaplin  <damon@gnome.org>
+
+	* src/Makefile.am: added -lm to LIBADD. Bug #671766.
+
 2013-08-20  Damon Chaplin  <damon@gnome.org>
 
 	* src/*.h: fixed a few documentation issues.
