--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-13  Damon Chaplin  <damon@localhost.lan>
+
+	* demo/*.c: remove deprecated GTK+ calls.
+
 2013-11-02  Damon Chaplin  <damon@gnome.org>
 
 	* demo/*.c: use gtk_box_pack_start() rather than gtk_container_add(),
