--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2016-12-16  Damon Chaplin  <damon@gnome.org>
+
+	* src/goocanvasimage.c (goo_canvas_image_paint): use cairo_clip() when
+	calling cairo_paint_with_alpha() otherwise it gets messed up.
+	(the flowers in the demo were sometimes painted incorrectly.)
+
 2016-12-15  Damon Chaplin  <damon@gnome.org>
 
 	* src/goocanvastext.c (goo_canvas_text_get_natural_extents):
