--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2016-12-16  Damon Chaplin  <damon@localhost.lan>
+
+	* autogen.sh: pinched from gdk-pixbuf.
+
+	* src/Makefile.am (GooCanvas_2_0_gir_CFLAGS): added -I$(top_srcdir)/src
+	so hopefully it builds OK outside srcdir. #735420
+
 2016-12-16  Damon Chaplin  <damon@gnome.org>
 
 	* src/goocanvasimage.c (goo_canvas_image_paint): use cairo_clip() when
