--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2006-04-24 16:26+0100\n"
 "Last-Translator: Damon Chaplin <damon@gnome.org>\n"
 "Language-Team: \n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
