--- a/po/ja.po
+++ b/po/ja.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2008-04-28 20:42+0900\n"
 "Last-Translator: kou@cozmixng.org <kou@cozmixng.org>\n"
 "Language-Team:\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
