--- a/po/sv.po
+++ b/po/sv.po
@@ -11,6 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2010-07-27 12:08+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
+"Language: sv\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
