--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
 
+GooCanvas 2.0.4	(Oct 10 2017)
+===============
+
+ o Support latest gtk-doc and add an index #788436.
+
+
 GooCanvas 2.0.3	(Aug 30 2017)
 ===============
 
