--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2017-10-09  Damon Chaplin  <damon@gnome.org>
 
+	* Released GooCanvas 2.0.4
+
+2017-10-09  Damon Chaplin  <damon@gnome.org>
+
 	* docs/goocanvas2-docs.sgml:
 	* docs/Makefile.am:
 	* configure.in: patch from Ross Gammon to support latest gtk-doc
